--- a/style.css
+++ b/style.css
@@ -18,6 +18,25 @@ body {
     font-weight: 700;
 }
 
+h3 {
+    color: #272727;
+text-align: center;
+font-size: 40px;
+font-weight: 800;
+}
+
+.para-description{
+    color: rgba(39, 39, 39, 0.60);
+    font-size: 18px;
+    font-weight: 400;
+    margin: 32px 0px;
+    text-align: center;
+}
+
+.feature {
+    margin: 150px 100px 0px 100px;
+}
+
 
 /* -----BANNERS----------- */
 .banner {
@@ -30,17 +49,56 @@ body {
 .banner-title {
     color: #272727;
     font-size: 50px;
-    font-weight: 900;
-     
+    font-weight: 900;  
 }
-.banner-description{
+.banner-description {
     color: rgba(39, 39, 39, 0.60);
     font-size: 18px;
     font-weight: 400;
     margin: 32px 0px;
 }
-
 .banner img {
-    width: 480px;
-    
+    width: 480px;  
 }
+
+/* -----FEATURE SECTION */
+
+
+.feature-cards {
+    display: flex;
+    justify-content: space-between;
+    text-align: center;
+    align-items: end;
+    gap: 30px;
+}
+.lotus-image {
+    width: 210px;
+    height: 280px;
+    padding: 100px 78px 0px 78px;
+    background: rgba(167, 33, 98, 0.15);
+    border-radius: 250px 250px 0 0;
+}
+.antrantia-image {
+    width: 220px;
+    height: 280px;
+    padding: 100px 78px 0px 78px;
+    background: rgba(5, 151, 160, 0.15);
+    border-radius: 250px 250px 0 0;
+}
+.daisy-image {
+    width: 210px;
+    height: 280px;
+    padding: 100px 78px 0px 78px;
+    background: rgba(71, 125, 17, 0.15);
+    border-radius: 250px 250px 0 0;
+}
+
+figcaption {
+    color: #272727;
+    text-align: center;
+    font-size: 20px;
+    font-weight: 700;
+    text-decoration-line: underline;
+    margin-top: 10px;
+}
+
