--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ font-weight: 800;
     text-align: center;
 }
 
-.feature {
+.feature, .service {
     margin: 150px 100px 0px 100px;
 }
 
@@ -88,7 +88,7 @@ font-weight: 800;
 .daisy-image {
     width: 210px;
     height: 280px;
-    padding: 100px 78px 0px 78px;
+    padding: 100px 70px 0px 70px;
     background: rgba(71, 125, 17, 0.15);
     border-radius: 250px 250px 0 0;
 }
@@ -102,3 +102,19 @@ figcaption {
     margin-top: 10px;
 }
 
+/* -------SERVICE SECTION------ */
+.service {
+    display: flex;
+    justify-content: space-evenly;
+    border-radius: 8px;
+    background: rgba(174, 170, 170, 0.172);
+    padding: 86px ;
+    text-align: center;
+}
+
+.service-title {
+    color: rgba(39, 39, 39, 0.80);
+    text-align: center;
+    font-size: 20px;
+    font-weight: 600;
+}
